unpackaged/main/default/objects/Wells_Fargo_Credentials__c/Wells_Fargo_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Wells Fargo Credentials</label>
</CustomObject>