unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/ACH_Processor_Key__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processor_Key__c</fullName>
    <label>ACH Processor Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>