unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Credit_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bank_Account_Name__c</fullName>
    <label>Credit Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>