unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Credit_Bank_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bank_Id__c</fullName>
    <description>The funding bank’s identification (ABA routing number).</description>
    <inlineHelpText>The funding bank’s identification (ABA routing number).</inlineHelpText>
    <label>Credit Bank Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>