unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Debit_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Debit_Bank_Account_Number__c</fullName>
    <label>Debit Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>