unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Debit_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Debit_Bank_Account_Type__c</fullName>
    <label>Debit Bank Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>