unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Debit_Bank_Id__c.field-meta.xml
<CustomField>
    <fullName>Debit_Bank_Id__c</fullName>
    <description>The funding bank’s identification (ABA routing number).</description>
    <inlineHelpText>The funding bank’s identification (ABA routing number).</inlineHelpText>
    <label>Debit Bank Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>