unpackaged/main/default/objects/Wells_Fargo_Credentials__c/fields/Debit_Bank_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Debit_Bank_Id_Type__c</fullName>
    <defaultValue>"ABA"</defaultValue>
    <description>The funding bank’s identification type. Valid value: ABA</description>
    <inlineHelpText>The funding bank’s identification type. Valid value: ABA</inlineHelpText>
    <label>Debit Bank Id Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>